# itiviti-cpp-analyzer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Checks.md  ICAAction.cpp  ICACTypeCharVisitor.cpp  ICACTypeCharVisitor.h  ICAChecks.cpp  ICAChecks.h  ICACommon.cpp  ICACommon.h  ICAConfig.cpp  ICAConfig.h  ICAConsumer.cpp  ICAConsumer.h  ICADiagnosticsBuilder.h  ICAEmplaceDefaultValueVisitor.cpp  ICAEmplaceDefaultValueVisitor.h  ICAEraseInLoopVisitor.cpp  ICAEraseInLoopVisitor.h  ICAFindEmplaceVisitor.cpp  ICAFindEmplaceVisitor.h  ICANoexceptVisitor.cpp  ICANoexceptVisitor.h  ICARemoveCStrVisitor.cpp  ICARemoveCStrVisitor.h  ICAUnitedVisitor.h  ICAVisitor.h  LICENSE  README.md  TODO  do_build.sh  get_deps_and_build.sh  sync-branches.txt
.github/workflows/: build_and_test.yml  manual_artifact_run.yml  pr_from_internal_repo.yml  publish_artifact_from_main.yml  test_on_push.yml
cmake/: BoostFromInternet.cmake  CheckCompilerSupported.cmake  FindLLVMHeaders.cmake  ICAConfig.cmake.in
cpp-course-checks/: CCBadRandVisitor.cpp  CCBadRandVisitor.h  CCForRangeConstVisitor.cpp  CCForRangeConstVisitor.h  CCImproperMoveVisitor.cpp  CCImproperMoveVisitor.h  CCInitMembersVisitor.cpp  CCInitMembersVisitor.h  CCIteratorVisitor.cpp  CCIteratorVisitor.h  CCMiscellaneousVisitor.cpp  CCMiscellaneousVisitor.h  CCReturnValueVisitor.cpp  CCReturnValueVisitor.h
include/internal/checks/: BadRandVisitor.h  ExclusiveUnitedVisitors.h  ForRangeConstVisitor.h  ImproperMoveVisitor.h  InitMembersVisitor.h  MiscellaneousVisitor.h  ReturnValueVisitor.h
include/internal/util/: RepoSpecific.h
include/shared/checks/: CTypeCharVisitor.h  EmplaceDefaultValueVisitor.h  EraseInLoopVisitor.h  FindEmplaceVisitor.h  InlineMethodsInClassBodyVisitor.h  LockGuardReleaseVisitor.h  MoveStringStreamVisitor.h  NoexceptVisitor.h  RemoveCStrVisitor.h
include/shared/common/: Checks.h  Common.h  Config.h  Consumer.h  DiagnosticsBuilder.h  UnitedVisitor.h  Visitor.h
src/internal/checks/: BadRandVisitor.cpp  ForRangeConstVisitor.cpp  ImproperMoveVisitor.cpp  InitMembersVisitor.cpp  MiscellaneousVisitor.cpp  ReturnValueVisitor.cpp
src/shared/checks/: CTypeCharVisitor.cpp  EmplaceDefaultValueVisitor.cpp  EraseInLoopVisitor.cpp  FindEmplaceVisitor.cpp  InlineMethodsInClassBodyVisitor.cpp  LockGuardReleaseVisitor.cpp  MoveStringStreamVisitor.cpp  NoexceptVisitor.cpp  RemoveCStrVisitor.cpp
src/shared/common/: Action.cpp  Checks.cpp  Common.cpp  Config.cpp  Consumer.cpp
test/: CMakeLists.txt  do_dump.sh  do_test.sh  test_emplace_default_value.cpp  test_erase_in_loop.cpp  test_find_emplace.cpp  test_lambdas.cpp  test_map.cpp  test_map_insert.cpp  test_namespace.cpp  test_noexcept.cpp  test_remove_c_str.cpp
test/cpp-course/: test_bad_rand.cpp  test_correct_iterator.cpp  test_for_range_const.cpp  test_improper_move.cpp  test_static_keyword.cpp  test_static_keyword.h  test_temporary_in_ctor.cpp
test/internal/: CMakeLists.txt  test_bad_rand.cpp  test_const_cast_member.cpp  test_const_param_silence.cpp  test_improper_move.cpp  test_init_field_in_body.cpp  test_return_value.cpp  test_static_keyword.cpp  test_static_keyword.h  test_temporary_in_ctor.cpp
test/shared/: CMakeLists.txt  test_char_in_ctype_pred.cpp  test_inline_demo.cpp  test_inline_demo.h  test_lock_guard_release.cpp  test_map.cpp  test_map_insert.cpp  test_method_decl_inline.cpp  test_move_string_stream.cpp  test_noexcept.cpp  test_remove_c_str.cpp  test_try_emplace.cpp
